{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 320,
  "lineage": "486fff0c-35ff-096e-2c63-5614f1df0b78",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0fb3490e3a3df10fb",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-22-44-253.compute-1.amazonaws.com",
            "public_ip": "23.22.44.253",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607114693507:internet-gateway/igw-0b86ea8e0fc50ee9c",
            "id": "igw-0b86ea8e0fc50ee9c",
            "owner_id": "607114693507",
            "tags": {
              "Name": "Internet gateway"
            },
            "tags_all": {
              "Name": "Internet gateway"
            },
            "vpc_id": "vpc-07ad77055a37d77d8"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb3490e3a3df10fb",
            "id": "nat-05dd44fc5c4ece972",
            "network_interface_id": "eni-0f02a077cfd337b07",
            "private_ip": "10.0.1.41",
            "public_ip": "23.22.44.253",
            "subnet_id": "subnet-0b53c84f796a15dbe"
          },
          "dependencies": [
            "aws_eip.natip",
            "aws_subnet.publicsubnets",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "privatenatgwout",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-078aca858da08c5ee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05dd44fc5c4ece972",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-078aca858da08c5ee",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natip",
            "aws_nat_gateway.natgw",
            "aws_route_table.privatedroutetable",
            "aws_subnet.publicsubnets",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "publicigwout",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b86ea8e0fc50ee9c",
            "id": "r-rtb-0c224a336d59cd6631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c224a336d59cd663",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicroutetable",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatedroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607114693507:route-table/rtb-078aca858da08c5ee",
            "id": "rtb-078aca858da08c5ee",
            "owner_id": "607114693507",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "privatedroutetable"
            },
            "tags_all": {
              "Name": "privatedroutetable"
            },
            "vpc_id": "vpc-07ad77055a37d77d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607114693507:route-table/rtb-0c224a336d59cd663",
            "id": "rtb-0c224a336d59cd663",
            "owner_id": "607114693507",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "publicroutetable"
            },
            "tags_all": {
              "Name": "publicroutetable"
            },
            "vpc_id": "vpc-07ad77055a37d77d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f28fc6210391b157",
            "route_table_id": "rtb-078aca858da08c5ee",
            "subnet_id": "subnet-0606e952c9b62b836"
          },
          "dependencies": [
            "aws_route_table.privatedroutetable",
            "aws_subnet.privatesubnets",
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0134b8af1634cd953",
            "route_table_id": "rtb-078aca858da08c5ee",
            "subnet_id": "subnet-0be1aaaa89426d159"
          },
          "dependencies": [
            "aws_route_table.privatedroutetable",
            "aws_subnet.privatesubnets",
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bda7f273d91e25d8",
            "route_table_id": "rtb-078aca858da08c5ee",
            "subnet_id": "subnet-012cf7392f44a485a"
          },
          "dependencies": [
            "aws_route_table.privatedroutetable",
            "aws_subnet.privatesubnets",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbcc34075b132f57",
            "route_table_id": "rtb-0c224a336d59cd663",
            "subnet_id": "subnet-0b53c84f796a15dbe"
          },
          "dependencies": [
            "aws_route_table.publicroutetable",
            "aws_subnet.publicsubnets",
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d97b1b8f5d3720eb",
            "route_table_id": "rtb-0c224a336d59cd663",
            "subnet_id": "subnet-03de30a892ca3178b"
          },
          "dependencies": [
            "aws_route_table.publicroutetable",
            "aws_subnet.publicsubnets",
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042a3801f30731157",
            "route_table_id": "rtb-0c224a336d59cd663",
            "subnet_id": "subnet-03402840cc490f996"
          },
          "dependencies": [
            "aws_route_table.publicroutetable",
            "aws_subnet.publicsubnets",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607114693507:security-group/sg-00da420fbefdf2b70",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00da420fbefdf2b70",
            "ingress": [],
            "name": "terraform-20210503200551794000000002",
            "name_prefix": "terraform-",
            "owner_id": "607114693507",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_sg"
            },
            "tags_all": {
              "Name": "private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ad77055a37d77d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607114693507:security-group/sg-075935d9b9a1bfb9c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-075935d9b9a1bfb9c",
            "ingress": [],
            "name": "terraform-20210503200551809200000003",
            "name_prefix": "terraform-",
            "owner_id": "607114693507",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_sg"
            },
            "tags_all": {
              "Name": "public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ad77055a37d77d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "AllowAllEgress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1713661418",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-075935d9b9a1bfb9c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "AllowAllSelf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-4054952987",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-075935d9b9a1bfb9c",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "AllowAllSelfprivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-3408198025",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00da420fbefdf2b70",
            "self": true,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private_sg",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "AllowAllfrompublictoPrivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-7217677",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-075935d9b9a1bfb9c",
            "self": false,
            "source_security_group_id": "sg-075935d9b9a1bfb9c",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "Allowhttp80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3121797917",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-075935d9b9a1bfb9c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "Allowssh22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-211322536",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-075935d9b9a1bfb9c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "privateAllowAllEgress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3616812258",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00da420fbefdf2b70",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private_sg",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607114693507:subnet/subnet-0606e952c9b62b836",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0606e952c9b62b836",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607114693507",
            "tags": {
              "Name": "prisub-1a"
            },
            "tags_all": {
              "Name": "prisub-1a"
            },
            "vpc_id": "vpc-07ad77055a37d77d8"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607114693507:subnet/subnet-0be1aaaa89426d159",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0be1aaaa89426d159",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607114693507",
            "tags": {
              "Name": "prisub-1b"
            },
            "tags_all": {
              "Name": "prisub-1b"
            },
            "vpc_id": "vpc-07ad77055a37d77d8"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607114693507:subnet/subnet-012cf7392f44a485a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-012cf7392f44a485a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607114693507",
            "tags": {
              "Name": "prisub-1c"
            },
            "tags_all": {
              "Name": "prisub-1c"
            },
            "vpc_id": "vpc-07ad77055a37d77d8"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607114693507:subnet/subnet-0b53c84f796a15dbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b53c84f796a15dbe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607114693507",
            "tags": {
              "Name": "pubsub-1a"
            },
            "tags_all": {
              "Name": "pubsub-1a"
            },
            "vpc_id": "vpc-07ad77055a37d77d8"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607114693507:subnet/subnet-03de30a892ca3178b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03de30a892ca3178b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607114693507",
            "tags": {
              "Name": "pubsub-1b"
            },
            "tags_all": {
              "Name": "pubsub-1b"
            },
            "vpc_id": "vpc-07ad77055a37d77d8"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607114693507:subnet/subnet-03402840cc490f996",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-03402840cc490f996",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607114693507",
            "tags": {
              "Name": "pubsub-1c"
            },
            "tags_all": {
              "Name": "pubsub-1c"
            },
            "vpc_id": "vpc-07ad77055a37d77d8"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607114693507:vpc/vpc-07ad77055a37d77d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a4cccad14b5a0af0",
            "default_route_table_id": "rtb-07218166e0f1f7489",
            "default_security_group_id": "sg-0b47a030038db177c",
            "dhcp_options_id": "dopt-a7b7aedc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07ad77055a37d77d8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07218166e0f1f7489",
            "owner_id": "607114693507",
            "tags": {
              "Name": "demo_vpc"
            },
            "tags_all": {
              "Name": "demo_vpc"
            }
          }
        }
      ]
    }
  ]
}